[test-rp] integrate into the build